--- a/server/package.json
+++ b/server/package.json
@@ -15,10 +15,13 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.2"
+    "mongoose": "^8.5.2",
+    "morgan": "^1.10.0",
+    "openai": "^4.55.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/morgan": "^1.9.9",
     "@types/node": "^22.1.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
