--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^11.3.24",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.0",
     "tailwind-merge": "^2.4.0",
