--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@tabler/icons-react": "^3.12.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "axios": "^1.7.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.1.8",
