--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
   "dependencies": {
     "@headlessui/react": "^2.1.2",
     "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "@tabler/icons-react": "^3.12.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "axios": "^1.7.3",
